@@ -6,6 +6,10 @@
 
                                   Changelog
 
+Daniel Stenberg (25 Sep 2008)
+- Fixed the HTTP Digest auth code to not behave badly when getting a blank realm
+  with realm="". http://curl.haxx.se/bug/view.cgi?id=2126435
+
 Daniel Fandrich (23 Sep 2008)
 - Make sure not to dereference the wrong UrlState proto union member when
   switching from one protocol to another in a single request (e.g.
